# afi

./: .dockerignore  .gitignore  404.html  CNAME  Dockerfile  Dockerfile.web  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  index.html  llms.txt  mkdocs.yml  sitemap.xml
.github/workflows/: test.yml
api/: README.md  index.html
api/gateway/: index.html
api/openapi/: .spectral.yaml  gateway.openapi.yaml  platform.openapi.yaml
api/platform/: index.html
clients/: README.md
clients/python/: README.md  pyproject.toml
clients/python/src/afi_platform/: __init__.py  client.py
clients/python/tests/: test_client.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
cmd/afi/: main.go
cmd/cli/: main.go
cmd/controlplane/: main.go
cmd/gateway/: main.go
cmd/gateway-local/: main.go
cmd/proxy/: main.go
cmd/worker/: main.go
configs/: example.yaml  local.yaml
configs/hooks/: req_mask_cc.js  res_inject_meta.js
database/: postgres-local-seed.sql
deploy/: afi.example.yaml  docker-compose.yml  env.example  nginx-web.conf
deployment/: index.html
deployment/binary/: index.html
deployment/customization/: index.html
deployment/docker/: index.html
docs/: deployment.md  index.md
hooks/: example.js
scripts/: build-release.sh  deploy-down.sh  deploy-health.sh  deploy-up.sh  generate-brand-assets.sh  openapi-drift-check.py  proto-gen.sh  verify-local.sh  wait-for-health.sh
search/: search_index.json
web/: .cta.json  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+722 files in other folders)
