[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afi-platform"
version = "1.0.0"
description = "Thin Python client for the AFI Platform API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/afi_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
